# UMINHO-Visualizacao-e-Iluminacao

./: .gitignore  README.md
VI-RT/: CMakeLists.txt  main.cpp  vcpkg.json
VI-RT/3DSortingStruct/: AccelStruct.hpp
VI-RT/Camera/: camera.hpp  perspective.cpp  perspective.hpp
VI-RT/Image/: ImageEXR.hpp  ImageJPG.cpp  ImagePPM.cpp  ImagePPM.hpp  image.hpp
VI-RT/ImageOut/: Distributed.ppm  MyImage.exr  MyImage.ppm  MyImage2.ppm  MyImage3.ppm  MyImage_padrao.ppm  variasLights.ppm
VI-RT/ImageOut/Imagens Shaders/: DistributedShader_64spp.ppm  DistributedShader_64spp_stochast.ppm  PathTracerShader_2048ssp.ppm  PathTracerShader_64ssp.ppm  PathTracerShader_64ssp_normalizado.ppm  WhittedShader_64spp.ppm
VI-RT/Light/: AmbientLight.hpp  AreaLight.hpp  light.hpp
VI-RT/Output_Results/: ppm_output.ppm
VI-RT/Primitive/: BB.hpp
VI-RT/Primitive/Geometry/: geometry.hpp  mesh.cpp  mesh.hpp  triangle.cpp  triangle.hpp
VI-RT/Rays/: intersection.hpp  ray.hpp
VI-RT/Renderer/: StandardRenderer.cpp  StandardRenderer.hpp  renderer.hpp
VI-RT/Scene/: scene.cpp  scene.hpp
VI-RT/Shader/: shader.hpp
VI-RT/Shader/AmbientShader/: AmbientShader.cpp  AmbientShader.hpp
VI-RT/Shader/DistributedShader/: DistributedShader.cpp  DistributedShader.hpp
VI-RT/Shader/PathTracerShader/: PathTracerShader.cpp  PathTracerShader.hpp
VI-RT/Shader/WhittedShader/: WhittedShader.cpp  WhittedShader.hpp
VI-RT/utils/: RGB.hpp  vector.hpp
